Added basic OPNsense integration, and fixed PfSense API by changing from X-API-Key and X-API-Secret headers to only x-api-key header (lowercase as specified in v2 API docs)

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -188,12 +188,24 @@
     "settings.advanced.mikrotik.password": "SSH-Passwort",
     "settings.advanced.mikrotik.key": "SSH-Key-Pfad (optional)",
     "settings.advanced.mikrotik.list": "Address-Listenname",
-    "settings.advanced.pfsense.note": "Benötigt das pfSense API-Paket. Verwende ein Token mit Alias-Rechten.",
+    "settings.advanced.pfsense.note": "Benötigt das pfSense REST API-Paket. Gib den API-Schlüssel und den Alias-Namen ein.",
+    "settings.advanced.pfsense.install_link": "REST API-Paket installieren",
+    "settings.advanced.pfsense.api_key_setup": "API-Schlüssel einrichten",
     "settings.advanced.pfsense.base_url": "Basis-URL",
-    "settings.advanced.pfsense.token": "API-Token",
-    "settings.advanced.pfsense.secret": "API-Secret",
+    "settings.advanced.pfsense.token": "API-Schlüssel",
+    "settings.advanced.pfsense.token_hint": "Erstellen in System > REST API > Keys im pfSense webConfigurator",
     "settings.advanced.pfsense.alias": "Alias-Name",
     "settings.advanced.pfsense.skip_tls": "TLS-Validierung überspringen (Self-Signed)",
+    "settings.advanced.opnsense.note": "Gib die OPNsense API-Anmeldedaten und den Alias-Namen ein.",
+    "settings.advanced.opnsense.api_docs": "API-Dokumentation",
+    "settings.advanced.opnsense.api_key_setup": "API-Schlüssel einrichten",
+    "settings.advanced.opnsense.base_url": "Basis-URL",
+    "settings.advanced.opnsense.key": "API-Schlüssel",
+    "settings.advanced.opnsense.key_hint": "Erstellen in System > Zugriff > Benutzer > API-Schlüssel",
+    "settings.advanced.opnsense.secret": "API-Geheimnis",
+    "settings.advanced.opnsense.secret_hint": "Zusammen mit dem API-Schlüssel erstellen",
+    "settings.advanced.opnsense.alias": "Alias-Name",
+    "settings.advanced.opnsense.skip_tls": "TLS-Validierung überspringen (Self-Signed)",
     "settings.advanced.log_title": "Log der permanenten Sperren",
     "settings.advanced.log_empty": "Noch keine permanenten Sperren vorhanden.",
     "settings.advanced.log_ip": "IP",
