--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -188,12 +188,24 @@
     "settings.advanced.mikrotik.password": "SSH Password",
     "settings.advanced.mikrotik.key": "SSH Key Path (optional)",
     "settings.advanced.mikrotik.list": "Address List Name",
-    "settings.advanced.pfsense.note": "Requires the pfSense API package. Use an API token that may edit aliases.",
+    "settings.advanced.pfsense.note": "Requires the pfSense REST API package. Enter the API key and alias to manage.",
+    "settings.advanced.pfsense.install_link": "Install REST API Package",
+    "settings.advanced.pfsense.api_key_setup": "Setup API Key",
     "settings.advanced.pfsense.base_url": "Base URL",
-    "settings.advanced.pfsense.token": "API Token",
-    "settings.advanced.pfsense.secret": "API Secret",
+    "settings.advanced.pfsense.token": "API Key",
+    "settings.advanced.pfsense.token_hint": "Generate in System > REST API > Keys in pfSense webConfigurator",
     "settings.advanced.pfsense.alias": "Alias Name",
     "settings.advanced.pfsense.skip_tls": "Skip TLS verification (self-signed)",
+    "settings.advanced.opnsense.note": "Enter the OPNsense API credentials and alias to manage.",
+    "settings.advanced.opnsense.api_docs": "API Documentation",
+    "settings.advanced.opnsense.api_key_setup": "Setup API Key",
+    "settings.advanced.opnsense.base_url": "Base URL",
+    "settings.advanced.opnsense.key": "API Key",
+    "settings.advanced.opnsense.key_hint": "Generate in System > Access > Users > API Keys",
+    "settings.advanced.opnsense.secret": "API Secret",
+    "settings.advanced.opnsense.secret_hint": "Generate together with API key",
+    "settings.advanced.opnsense.alias": "Alias Name",
+    "settings.advanced.opnsense.skip_tls": "Skip TLS verification (self-signed)",
     "settings.advanced.log_title": "Permanent Block Log",
     "settings.advanced.log_empty": "No permanent blocks recorded yet.",
     "settings.advanced.log_ip": "IP",
