--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -188,12 +188,24 @@
   "settings.advanced.mikrotik.password": "Contraseña SSH",
   "settings.advanced.mikrotik.key": "Ruta de la clave SSH (opcional)",
   "settings.advanced.mikrotik.list": "Nombre de la lista",
-  "settings.advanced.pfsense.note": "Requiere el paquete de API de pfSense. Usa un token con acceso a alias.",
+  "settings.advanced.pfsense.note": "Requiere el paquete REST API de pfSense. Introduce la clave API y el alias a gestionar.",
+  "settings.advanced.pfsense.install_link": "Instalar paquete REST API",
+  "settings.advanced.pfsense.api_key_setup": "Configurar clave API",
   "settings.advanced.pfsense.base_url": "URL base",
-  "settings.advanced.pfsense.token": "Token API",
-  "settings.advanced.pfsense.secret": "Secreto API",
+  "settings.advanced.pfsense.token": "Clave API",
+  "settings.advanced.pfsense.token_hint": "Generar en Sistema > REST API > Keys en el webConfigurator de pfSense",
   "settings.advanced.pfsense.alias": "Nombre del alias",
   "settings.advanced.pfsense.skip_tls": "Omitir verificación TLS (autofirmado)",
+  "settings.advanced.opnsense.note": "Introduce las credenciales API de OPNsense y el alias a gestionar.",
+  "settings.advanced.opnsense.api_docs": "Documentación API",
+  "settings.advanced.opnsense.api_key_setup": "Configurar clave API",
+  "settings.advanced.opnsense.base_url": "URL base",
+  "settings.advanced.opnsense.key": "Clave API",
+  "settings.advanced.opnsense.key_hint": "Generar en Sistema > Acceso > Usuarios > Claves API",
+  "settings.advanced.opnsense.secret": "Secreto API",
+  "settings.advanced.opnsense.secret_hint": "Generar junto con la clave API",
+  "settings.advanced.opnsense.alias": "Nombre del alias",
+  "settings.advanced.opnsense.skip_tls": "Omitir verificación TLS (autofirmado)",
   "settings.advanced.log_title": "Registro de bloqueos permanentes",
   "settings.advanced.log_empty": "Aún no hay bloqueos permanentes.",
   "settings.advanced.log_ip": "IP",
