--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -188,12 +188,24 @@
   "settings.advanced.mikrotik.password": "Mot de passe SSH",
   "settings.advanced.mikrotik.key": "Chemin de clé SSH (optionnel)",
   "settings.advanced.mikrotik.list": "Nom de la liste",
-  "settings.advanced.pfsense.note": "Nécessite le paquet API pfSense. Utiliser un jeton ayant accès aux alias.",
+  "settings.advanced.pfsense.note": "Nécessite le paquet REST API pfSense. Entrez la clé API et l'alias à gérer.",
+  "settings.advanced.pfsense.install_link": "Installer le paquet REST API",
+  "settings.advanced.pfsense.api_key_setup": "Configurer la clé API",
   "settings.advanced.pfsense.base_url": "URL de base",
-  "settings.advanced.pfsense.token": "Jeton API",
-  "settings.advanced.pfsense.secret": "Secret API",
-  "settings.advanced.pfsense.alias": "Nom d’alias",
+  "settings.advanced.pfsense.token": "Clé API",
+  "settings.advanced.pfsense.token_hint": "Générer dans Système > REST API > Keys dans le webConfigurator pfSense",
+  "settings.advanced.pfsense.alias": "Nom d'alias",
   "settings.advanced.pfsense.skip_tls": "Ignorer la vérification TLS (auto-signé)",
+  "settings.advanced.opnsense.note": "Entrez les identifiants API OPNsense et l'alias à gérer.",
+  "settings.advanced.opnsense.api_docs": "Documentation API",
+  "settings.advanced.opnsense.api_key_setup": "Configurer la clé API",
+  "settings.advanced.opnsense.base_url": "URL de base",
+  "settings.advanced.opnsense.key": "Clé API",
+  "settings.advanced.opnsense.key_hint": "Générer dans Système > Accès > Utilisateurs > Clés API",
+  "settings.advanced.opnsense.secret": "Secret API",
+  "settings.advanced.opnsense.secret_hint": "Générer avec la clé API",
+  "settings.advanced.opnsense.alias": "Nom d'alias",
+  "settings.advanced.opnsense.skip_tls": "Ignorer la vérification TLS (auto-signé)",
   "settings.advanced.log_title": "Journal des blocages permanents",
   "settings.advanced.log_empty": "Aucun blocage permanent pour le moment.",
   "settings.advanced.log_ip": "IP",
