--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -188,12 +188,24 @@
   "settings.advanced.mikrotik.password": "Password SSH",
   "settings.advanced.mikrotik.key": "Percorso chiave SSH (opzionale)",
   "settings.advanced.mikrotik.list": "Nome della lista",
-  "settings.advanced.pfsense.note": "Richiede il pacchetto API di pfSense. Usa un token con accesso agli alias.",
+  "settings.advanced.pfsense.note": "Richiede il pacchetto REST API di pfSense. Inserisci la chiave API e l'alias da gestire.",
+  "settings.advanced.pfsense.install_link": "Installa pacchetto REST API",
+  "settings.advanced.pfsense.api_key_setup": "Configura chiave API",
   "settings.advanced.pfsense.base_url": "URL base",
-  "settings.advanced.pfsense.token": "Token API",
-  "settings.advanced.pfsense.secret": "Segreto API",
+  "settings.advanced.pfsense.token": "Chiave API",
+  "settings.advanced.pfsense.token_hint": "Genera in Sistema > REST API > Keys nel webConfigurator di pfSense",
   "settings.advanced.pfsense.alias": "Nome alias",
   "settings.advanced.pfsense.skip_tls": "Ignora verifica TLS (auto-firmato)",
+  "settings.advanced.opnsense.note": "Inserisci le credenziali API di OPNsense e l'alias da gestire.",
+  "settings.advanced.opnsense.api_docs": "Documentazione API",
+  "settings.advanced.opnsense.api_key_setup": "Configura chiave API",
+  "settings.advanced.opnsense.base_url": "URL base",
+  "settings.advanced.opnsense.key": "Chiave API",
+  "settings.advanced.opnsense.key_hint": "Genera in Sistema > Accesso > Utenti > Chiavi API",
+  "settings.advanced.opnsense.secret": "Segreto API",
+  "settings.advanced.opnsense.secret_hint": "Genera insieme alla chiave API",
+  "settings.advanced.opnsense.alias": "Nome alias",
+  "settings.advanced.opnsense.skip_tls": "Ignora verifica TLS (auto-firmato)",
   "settings.advanced.log_title": "Registro dei blocchi permanenti",
   "settings.advanced.log_empty": "Nessun blocco permanente ancora registrato.",
   "settings.advanced.log_ip": "IP",
