--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -188,12 +188,24 @@
     "settings.advanced.mikrotik.password": "SSH-Passwort",
     "settings.advanced.mikrotik.key": "SSH-Key-Pfad (optional)",
     "settings.advanced.mikrotik.list": "Adress-Lischtename",
-    "settings.advanced.pfsense.note": "Bruucht s pfSense API-Päckli. Erstell es Token wo Aliase cha bearbeite.",
+    "settings.advanced.pfsense.note": "Bruucht s pfSense REST API-Päckli. Gib dr API-Schlüssu und dr Alias-Name i.",
+    "settings.advanced.pfsense.install_link": "REST API-Päckli installiere",
+    "settings.advanced.pfsense.api_key_setup": "API-Schlüssu iirichte",
     "settings.advanced.pfsense.base_url": "Basis-URL",
-    "settings.advanced.pfsense.token": "API-Token",
-    "settings.advanced.pfsense.secret": "API-Secret",
+    "settings.advanced.pfsense.token": "API-Schlüssu",
+    "settings.advanced.pfsense.token_hint": "Erstelle i System > REST API > Keys im pfSense webConfigurator",
     "settings.advanced.pfsense.alias": "Alias-Name",
     "settings.advanced.pfsense.skip_tls": "TLS-Prüfig überspringe (Self-Signed)",
+    "settings.advanced.opnsense.note": "Gib d OPNsense API-Ameldedate und dr Alias-Name i.",
+    "settings.advanced.opnsense.api_docs": "API-Dokumentation",
+    "settings.advanced.opnsense.api_key_setup": "API-Schlüssu iirichte",
+    "settings.advanced.opnsense.base_url": "Basis-URL",
+    "settings.advanced.opnsense.key": "API-Schlüssu",
+    "settings.advanced.opnsense.key_hint": "Erstelle i System > Zuegriff > Benutzer > API-Schlüssu",
+    "settings.advanced.opnsense.secret": "API-Geheimnis",
+    "settings.advanced.opnsense.secret_hint": "Zämme mit em API-Schlüssu erstelle",
+    "settings.advanced.opnsense.alias": "Alias-Name",
+    "settings.advanced.opnsense.skip_tls": "TLS-Prüfig überspringe (Self-Signed)",
     "settings.advanced.log_title": "Permanent gsperrti IPs",
     "settings.advanced.log_empty": "No ke permanenti Sperrig erfasst.",
     "settings.advanced.log_ip": "IP",
