Implemented a real-time console log streaming via WebSocket for debugging purposes. Users can enable console output in settings to view application logs directly in the web interface.

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -115,6 +115,10 @@
     "settings.port_env_hint": "Um den Port über die Weboberfläche zu ändern, entfernen Sie die PORT-Umgebungsvariable und starten Sie den Container neu.",
     "settings.port_restart_hint": "⚠️ Port-Änderungen erfordern einen Neustart des Containers, um wirksam zu werden.",
     "settings.enable_debug": "Debug-Protokoll aktivieren",
+    "settings.enable_console": "Konsolenausgabe aktivieren",
+    "settings.console.title": "Konsolenausgabe",
+    "settings.console.clear": "Löschen",
+    "settings.console.save_hint": "Bitte speichern Sie zuerst Ihre Einstellungen, bevor hier Logs angezeigt werden.",
     "settings.alert": "Alarm-Einstellungen",
     "settings.callback_url": "Fail2ban Callback-URL",
     "settings.callback_url_placeholder": "http://127.0.0.1:8080",
