--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -115,6 +115,10 @@
     "settings.port_env_hint": "Um de Port über d Weboberflächi z ändere, entferne d PORT-Umgebigsvariable und start de Container neu.",
     "settings.port_restart_hint": "⚠️ Port-Änderige erfordere ä Neustart vom Container, zum wirksam z werde.",
     "settings.enable_debug": "Debug-Modus aktivierä",
+    "settings.enable_console": "Konsolenusgab aktivierä",
+    "settings.console.title": "Konsolenusgab",
+    "settings.console.clear": "Löschä",
+    "settings.console.save_hint": "Bitte speichere zerscht dini Istellige, bevor hiä Logs azeigt wärde.",
     "settings.alert": "Alarm-Istellige",
     "settings.callback_url": "Fail2ban Callback-URL",
     "settings.callback_url_placeholder": "http://127.0.0.1:8080",
