--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -115,6 +115,10 @@
     "settings.port_env_hint": "To change the port via Web UI, remove the PORT environment variable and restart the container.",
     "settings.port_restart_hint": "⚠️ Port changes require a container restart to take effect.",
     "settings.enable_debug": "Enable Debug Log",
+    "settings.enable_console": "Enable Console Output",
+    "settings.console.title": "Console Output",
+    "settings.console.clear": "Clear",
+    "settings.console.save_hint": "Please save your settings first before logs will be displayed here.",
     "settings.alert": "Alert Settings",
     "settings.callback_url": "Fail2ban Callback URL",
     "settings.callback_url_placeholder": "http://127.0.0.1:8080",
