--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -115,6 +115,10 @@
   "settings.port_env_hint": "Para cambiar el puerto mediante la interfaz web, elimine la variable de entorno PORT y reinicie el contenedor.",
   "settings.port_restart_hint": "⚠️ Los cambios de puerto requieren un reinicio del contenedor para surtir efecto.",
   "settings.enable_debug": "Habilitar el modo de depuración",
+  "settings.enable_console": "Habilitar salida de consola",
+  "settings.console.title": "Salida de consola",
+  "settings.console.clear": "Limpiar",
+  "settings.console.save_hint": "Por favor, guarde primero su configuración antes de que se muestren los registros aquí.",
   "settings.alert": "Configuración de alertas",
   "settings.callback_url": "URL de retorno de Fail2ban",
   "settings.callback_url_placeholder": "http://127.0.0.1:8080",
