--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -115,6 +115,10 @@
   "settings.port_env_hint": "Pour modifier le port via l'interface Web, supprimez la variable d'environnement PORT et redémarrez le conteneur.",
   "settings.port_restart_hint": "⚠️ Les modifications du port nécessitent un redémarrage du conteneur pour prendre effet.",
   "settings.enable_debug": "Activer le mode débogage",
+  "settings.enable_console": "Activer la sortie console",
+  "settings.console.title": "Sortie console",
+  "settings.console.clear": "Effacer",
+  "settings.console.save_hint": "Veuillez d'abord enregistrer vos paramètres avant que les journaux ne s'affichent ici.",
   "settings.alert": "Paramètres d'alerte",
   "settings.callback_url": "URL de rappel Fail2ban",
   "settings.callback_url_placeholder": "http://127.0.0.1:8080",
