--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -115,6 +115,10 @@
   "settings.port_env_hint": "Per modificare la porta tramite l'interfaccia Web, rimuovere la variabile d'ambiente PORT e riavviare il contenitore.",
   "settings.port_restart_hint": "⚠️ Le modifiche alla porta richiedono un riavvio del contenitore per avere effetto.",
   "settings.enable_debug": "Abilita debug",
+  "settings.enable_console": "Abilita output console",
+  "settings.console.title": "Output console",
+  "settings.console.clear": "Pulisci",
+  "settings.console.save_hint": "Si prega di salvare prima le impostazioni prima che i log vengano visualizzati qui.",
   "settings.alert": "Impostazioni di allarme",
   "settings.callback_url": "URL di callback Fail2ban",
   "settings.callback_url_placeholder": "http://127.0.0.1:8080",
