Fix time format-desc to match Fail2ban's format

--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -152,14 +152,14 @@
     "settings.default_jail_enable": "Jails standardmässig aktivieren",
     "settings.default_jail_enable.description": "Wenn aktiviert, werde alli Jails standardmässig aktiviert. Wenn deaktiviert, mues jedes Jails explizit aktiviert werde.",
     "settings.default_bantime": "Standard-Bantime",
-    "settings.default_bantime.description": "D Aazahl vo de Sekunde, wo ä Host gsperrt wird. Zytformat: 1h = 1 Stund, 1d = 1 Tag, 1w = 1 Wuche, 1m = 1 Monet, 1y = 1 Jahr.",
+    "settings.default_bantime.description": "D Aazahl vo de Sekunde, wo ä Host gsperrt wird. Zytformat: 1m = 1 Minute, 1h = 1 Stund, 1d = 1 Tag, 1w = 1 Woche, 1mo = 1 Monet, 1y = 1 Jahr.",
     "settings.default_bantime_placeholder": "z.B. 48h",
     "settings.banaction": "Banaction",
     "settings.banaction.description": "Standard-Sperraktione (z.B. iptables-multiport, iptables-allports, firewallcmd-multiport, etc). Wird brucht, zum action_* Variablen z definiere.",
     "settings.banaction_allports": "Banaction Allports",
     "settings.banaction_allports.description": "Sperraktione für alli Ports (z.B. iptables-allports, firewallcmd-allports, etc). Wird brucht, wänn ä Jail alli Ports statt spezifischi Ports sperre muess.",
     "settings.default_findtime": "Standard-Findtime",
-    "settings.default_findtime.description": "Ä Host wird gsperrt, wenn er i de letschte 'findtime' Sekunde 'maxretry' Fähler generiert het. Zytformat: 1h = 1 Stund, 1d = 1 Tag, 1w = 1 Wuche, 1m = 1 Monet, 1y = 1 Jahr.",
+    "settings.default_findtime.description": "Ä Host wird gsperrt, wenn er i de letschte 'findtime' Sekunde 'maxretry' Fähler generiert het. Zytformat: 1m = 1 Minute, 1h = 1 Stund, 1d = 1 Tag, 1w = 1 Woche, 1mo = 1 Monet, 1y = 1 Jahr.",
     "settings.default_findtime_placeholder": "z.B. 30m",
     "settings.default_max_retry": "Standard-Maximalversüech",
     "settings.default_max_retry.description": "Aazahl vo de Fähler, bevor ä Host gsperrt wird.",
