--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -152,14 +152,14 @@
   "settings.default_jail_enable": "Jails por defecto activados",
   "settings.default_jail_enable.description": "Si está habilitado, todos los jails estarán habilitados por defecto. Cuando está deshabilitado, los jails deben habilitarse explícitamente.",
   "settings.default_bantime": "Bantime por defecto",
-  "settings.default_bantime.description": "El número de segundos que un host está bloqueado. Formato de tiempo: 1h = 1 hora, 1d = 1 día, 1w = 1 semana, 1m = 1 mes, 1y = 1 año.",
+  "settings.default_bantime.description": "El número de segundos que un host está bloqueado. Formato de tiempo: 1m = 1 minutos, 1h = 1 horas, 1d = 1 días, 1w = 1 semana, 1mo = 1 mes, 1y = 1 año.",
   "settings.default_bantime_placeholder": "p.ej., 48h",
   "settings.banaction": "Banaction",
   "settings.banaction.description": "Acción de bloqueo por defecto (p.ej. iptables-multiport, iptables-allports, firewallcmd-multiport, etc). Se utiliza para definir las variables action_*.",
   "settings.banaction_allports": "Banaction Allports",
   "settings.banaction_allports.description": "Acción de bloqueo para todos los puertos (p.ej. iptables-allports, firewallcmd-allports, etc). Se utiliza cuando un jail necesita bloquear todos los puertos en lugar de puertos específicos.",
   "settings.default_findtime": "Findtime por defecto",
-  "settings.default_findtime.description": "Un host es bloqueado si ha generado 'maxretry' fallos durante los últimos 'findtime' segundos. Formato de tiempo: 1h = 1 hora, 1d = 1 día, 1w = 1 semana, 1m = 1 mes, 1y = 1 año.",
+  "settings.default_findtime.description": "Un host es bloqueado si ha generado 'maxretry' fallos durante los últimos 'findtime' segundos. Formato de tiempo: 1m = 1 minutos, 1h = 1 horas, 1d = 1 días, 1w = 1 semana, 1mo = 1 mes, 1y = 1 año.",
   "settings.default_findtime_placeholder": "p.ej., 30m",
   "settings.default_max_retry": "Número máximo de reintentos por defecto",
   "settings.default_max_retry.description": "Número de fallos antes de que un host sea bloqueado.",
