--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -152,14 +152,14 @@
     "settings.default_jail_enable": "Enable Jails by Default",
     "settings.default_jail_enable.description": "If enabled, all jails will be enabled by default. When disabled, jails must be explicitly enabled.",
     "settings.default_bantime": "Default Bantime",
-    "settings.default_bantime.description": "The number of seconds that a host is banned. Time format: 1h = 1 hour, 1d = 1 day, 1w = 1 week, 1m = 1 month, 1y = 1 year.",
+    "settings.default_bantime.description": "The number of seconds that a host is banned. Time format: 1m = 1 minutes, 1h = 1 hour, 1d = 1 day, 1w = 1 week, 1mo = 1 month, 1y = 1 year.",
     "settings.default_bantime_placeholder": "e.g., 48h",
     "settings.banaction": "Banaction",
     "settings.banaction.description": "Default banning action (e.g. iptables-multiport, iptables-allports, firewallcmd-multiport, etc). It is used to define action_* variables.",
     "settings.banaction_allports": "Banaction Allports",
     "settings.banaction_allports.description": "Banning action for all ports (e.g. iptables-allports, firewallcmd-allports, etc). Used when a jail needs to ban all ports instead of specific ones.",
     "settings.default_findtime": "Default Findtime",
-    "settings.default_findtime.description": "A host is banned if it has generated 'maxretry' failures during the last 'findtime' seconds. Time format: 1h = 1 hour, 1d = 1 day, 1w = 1 week, 1m = 1 month, 1y = 1 year.",
+    "settings.default_findtime.description": "A host is banned if it has generated 'maxretry' failures during the last 'findtime' seconds. Time format: 1m = 1 minutes, 1h = 1 hours, 1d = 1 days, 1w = 1 week, 1mo = 1 month, 1y = 1 year.",
     "settings.default_findtime_placeholder": "e.g., 30m",
     "settings.default_max_retry": "Default Max Retry",
     "settings.default_max_retry.description": "Number of failures before a host gets banned.",
