--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -152,14 +152,14 @@
   "settings.default_jail_enable": "Jails par défaut activés",
   "settings.default_jail_enable.description": "Si activé, tous les jails seront activés par défaut. Lorsqu'il est désactivé, les jails doivent être explicitement activés.",
   "settings.default_bantime": "Bantime par défaut",
-  "settings.default_bantime.description": "Le nombre de secondes pendant lesquelles un hôte est banni. Format de temps : 1h = 1 heure, 1d = 1 jour, 1w = 1 semaine, 1m = 1 mois, 1y = 1 an.",
+  "settings.default_bantime.description": "Le nombre de secondes pendant lesquelles un hôte est banni. Format de temps : 1m = 1 minutes, 1h = 1 heures, 1d = 1 jours, 1w = 1 semaines, 1mo = 1 mois, 1y = 1 années.",
   "settings.default_bantime_placeholder": "par exemple, 48h",
   "settings.banaction": "Banaction",
   "settings.banaction.description": "Action de bannissement par défaut (par ex. iptables-multiport, iptables-allports, firewallcmd-multiport, etc). Elle est utilisée pour définir les variables action_*.",
   "settings.banaction_allports": "Banaction Allports",
   "settings.banaction_allports.description": "Action de bannissement pour tous les ports (par ex. iptables-allports, firewallcmd-allports, etc). Utilisée lorsqu'un jail doit bannir tous les ports au lieu de ports spécifiques.",
   "settings.default_findtime": "Findtime par défaut",
-  "settings.default_findtime.description": "Un hôte est banni s'il a généré 'maxretry' échecs pendant les dernières 'findtime' secondes. Format de temps : 1h = 1 heure, 1d = 1 jour, 1w = 1 semaine, 1m = 1 mois, 1y = 1 an.",
+  "settings.default_findtime.description": "Un hôte est banni s'il a généré 'maxretry' échecs pendant les dernières 'findtime' secondes. Format de temps : 1m = 1 minutes, 1h = 1 heures, 1d = 1 jours, 1w = 1 semaines, 1mo = 1 mois, 1y = 1 années.",
   "settings.default_findtime_placeholder": "par exemple, 30m",
   "settings.default_max_retry": "Nombre maximal de réessais par défaut",
   "settings.default_max_retry.description": "Nombre d'échecs avant qu'un hôte ne soit banni.",
