Enhanced Filter Debug page with inline editing and improved SSH filter testing

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -101,6 +101,11 @@
     "logs.modal.insights_recurring_empty": "Keine wiederkehrenden IPs erkannt.",
     "filter_debug.title": "Filter-Debug",
     "filter_debug.select_filter": "Wählen Sie einen Filter",
+    "filter_debug.filter_content": "Filter-Inhalt",
+    "filter_debug.filter_content_hint": "Bearbeiten Sie den Filter-Regex zum Testen. Änderungen sind temporär und werden nicht gespeichert.",
+    "filter_debug.filter_content_hint_readonly": "Filter-Inhalt wird schreibgeschützt angezeigt. Klicken Sie auf 'Bearbeiten', um diesen für Tests zu ändern. Änderungen sind temporär und werden nicht gespeichert.",
+    "filter_debug.edit_filter": "Bearbeiten",
+    "filter_debug.cancel_edit": "Abbrechen",
     "filter_debug.log_lines": "Logzeilen",
     "filter_debug.log_lines_placeholder": "Geben Sie die Logzeilen hier ein...",
     "filter_debug.test_filter": "Filter testen",
