--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -101,6 +101,11 @@
     "logs.modal.insights_recurring_empty": "Ke wiederkehrendi IPs erkannt.",
     "filter_debug.title": "Filter Debug",
     "filter_debug.select_filter": "Wähl ä Filter us",
+    "filter_debug.filter_content": "Filter-Inhalt",
+    "filter_debug.filter_content_hint": "Bearbeit dr Fiuter-Regex unge zum Testä. Änderigä si temporär und wärde nid gspeichert.",
+    "filter_debug.filter_content_hint_readonly": "Fiuter-Inhalt wird schribgschützt azeigt. Klick uf 'Bearbeitä', zum abändärä. Änderigä si temporär und wärde nid gspeichert.",
+    "filter_debug.edit_filter": "Bearbeitä",
+    "filter_debug.cancel_edit": "Abbrächä",
     "filter_debug.log_lines": "Log-Zile",
     "filter_debug.log_lines_placeholder": "Füeg ä Log-Zile ii...",
     "filter_debug.test_filter": "Filter teste",
