--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -101,6 +101,11 @@
     "logs.modal.insights_recurring_empty": "No recurring IPs detected.",
     "filter_debug.title": "Filter Debug",
     "filter_debug.select_filter": "Select a Filter",
+    "filter_debug.filter_content": "Filter Content",
+    "filter_debug.filter_content_hint": "Edit the filter regex below for testing. Changes are temporary and not saved.",
+    "filter_debug.filter_content_hint_readonly": "Filter content is shown read-only. Click 'Edit' to modify for testing. Changes are temporary and not saved.",
+    "filter_debug.edit_filter": "Edit",
+    "filter_debug.cancel_edit": "Cancel",
     "filter_debug.log_lines": "Log Lines",
     "filter_debug.log_lines_placeholder": "Enter log lines here...",
     "filter_debug.test_filter": "Test Filter",
