--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -101,6 +101,11 @@
     "logs.modal.insights_recurring_empty": "No se detectaron IPs recurrentes.",
   "filter_debug.title": "Depuración de filtros",
   "filter_debug.select_filter": "Selecciona un filtro",
+  "filter_debug.filter_content": "Contenido del filtro",
+  "filter_debug.filter_content_hint": "Edita el regex del filtro a continuación para las pruebas. Los cambios son temporales y no se guardan.",
+  "filter_debug.filter_content_hint_readonly": "El contenido del filtro se muestra de solo lectura. Haz clic en 'Editar' para modificar para las pruebas. Los cambios son temporales y no se guardan.",
+  "filter_debug.edit_filter": "Editar",
+  "filter_debug.cancel_edit": "Cancelar",
   "filter_debug.log_lines": "Líneas de log",
   "filter_debug.log_lines_placeholder": "Introduce las líneas de log aquí...",
   "filter_debug.test_filter": "Probar filtro",
