--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -101,6 +101,11 @@
     "logs.modal.insights_recurring_empty": "Aucune IP récurrente détectée.",
   "filter_debug.title": "Débogage des filtres",
   "filter_debug.select_filter": "Sélectionnez un filtre",
+  "filter_debug.filter_content": "Contenu du filtre",
+  "filter_debug.filter_content_hint": "Modifiez le regex du filtre ci-dessous pour les tests. Les modifications sont temporaires et ne sont pas enregistrées.",
+  "filter_debug.filter_content_hint_readonly": "Le contenu du filtre est affiché en lecture seule. Cliquez sur 'Modifier' pour modifier pour les tests. Les modifications sont temporaires et ne sont pas enregistrées.",
+  "filter_debug.edit_filter": "Modifier",
+  "filter_debug.cancel_edit": "Annuler",
   "filter_debug.log_lines": "Lignes de log",
   "filter_debug.log_lines_placeholder": "Entrez les lignes de log ici...",
   "filter_debug.test_filter": "Tester le filtre",
