--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -101,6 +101,11 @@
     "logs.modal.insights_recurring_empty": "Nessun IP ricorrente rilevato.",
   "filter_debug.title": "Debug Filtro",
   "filter_debug.select_filter": "Seleziona un filtro",
+  "filter_debug.filter_content": "Contenuto del filtro",
+  "filter_debug.filter_content_hint": "Modifica il regex del filtro qui sotto per i test. Le modifiche sono temporanee e non vengono salvate.",
+  "filter_debug.filter_content_hint_readonly": "Il contenuto del filtro è mostrato in sola lettura. Clicca su 'Modifica' per modificare per i test. Le modifiche sono temporanee e non vengono salvate.",
+  "filter_debug.edit_filter": "Modifica",
+  "filter_debug.cancel_edit": "Annulla",
   "filter_debug.log_lines": "Righe di log",
   "filter_debug.log_lines_placeholder": "Inserisci qui le righe di log...",
   "filter_debug.test_filter": "Testa filtro",
