Add hint for local path mount requirements

--- a/internal/locales/de.json
+++ b/internal/locales/de.json
@@ -246,6 +246,9 @@
     "modal.jail_name": "Jail-Name",
     "modal.jail_name_hint": "Nur alphanumerische Zeichen, Bindestriche und Unterstriche sind erlaubt.",
     "modal.test_logpath": "Logpfad testen",
+    "modal.local_server_logpath_note": "ℹ️ Hinweis:",
+    "modal.local_server_logpath_text_prefix": "Für einen lokalen Fail2ban-Server (z.B. installiert auf dem Host-System oder in einem Container auf demselben Host), müssen Logdateien auch im fail2ban-ui Container gemountet werden (z.B.",
+    "modal.local_server_logpath_text_suffix": "), damit fail2ban-ui Logpfad-Variablen oder -Pfade überprüfen kann, wenn Jails aktualisiert werden.",
     "modal.create": "Erstellen",
     "modal.create_filter": "Neuen Filter erstellen",
     "modal.create_filter_title": "Neuen Filter erstellen",
