--- a/internal/locales/de_ch.json
+++ b/internal/locales/de_ch.json
@@ -246,6 +246,9 @@
     "modal.jail_name": "Jail-Name",
     "modal.jail_name_hint": "Nur alphanumerischi Zeiche, Bindestrich und Unterstriche si erlaubt.",
     "modal.test_logpath": "Logpfad teste",
+    "modal.local_server_logpath_note": "ℹ️ Hinweis:",
+    "modal.local_server_logpath_text_prefix": "Für lokali Fail2ban-Server (z.B. installiert auf em Host-System oder ime Container ufem gliche Host), müesse Logdateie ou im fail2ban-ui Container gmountet wärde (z.B.",
+    "modal.local_server_logpath_text_suffix": "), dass fail2ban-ui Log-Variable oder Pfäd überprüefe cha, wenn Jails aktualisiert wärde.",
     "modal.create": "Ersteue",
     "modal.create_filter": "Neue Filter ersteue",
     "modal.create_filter_title": "Neue Filter ersteue",
