--- a/internal/locales/en.json
+++ b/internal/locales/en.json
@@ -246,6 +246,9 @@
     "modal.jail_name": "Jail Name",
     "modal.jail_name_hint": "Only alphanumeric characters, dashes, and underscores are allowed.",
     "modal.test_logpath": "Test Logpath",
+    "modal.local_server_logpath_note": "ℹ️ Note:",
+    "modal.local_server_logpath_text_prefix": "For a local fail2ban server (e.g. installed on container host system or in a container on same host), log files must also be mounted to the fail2ban-ui container (e.g.,",
+    "modal.local_server_logpath_text_suffix": ") this is required so that the fail2ban-ui can verify logpath variables or paths when updating jails.",
     "modal.create": "Create",
     "modal.create_filter": "Create New Filter",
     "modal.create_filter_title": "Create New Filter",
