--- a/internal/locales/es.json
+++ b/internal/locales/es.json
@@ -246,6 +246,9 @@
   "modal.jail_name": "Nombre del jail",
   "modal.jail_name_hint": "Solo se permiten caracteres alfanuméricos, guiones y guiones bajos.",
   "modal.test_logpath": "Probar ruta de registro",
+  "modal.local_server_logpath_note": "ℹ️ Nota:",
+  "modal.local_server_logpath_text_prefix": "Para servidores locales Fail2ban (p. ej. instalado en el sistema contenedor host o en un contenedor en el mismo host), los archivos de registro también deben montarse en el contenedor fail2ban-ui (p. ej.,",
+  "modal.local_server_logpath_text_suffix": ") esto es necesario para que fail2ban-ui pueda verificar variables o rutas de logpath cuando se actualizan jails.",
   "modal.create": "Crear",
   "modal.create_filter": "Crear nuevo filtro",
   "modal.create_filter_title": "Crear nuevo filtro",
