--- a/internal/locales/fr.json
+++ b/internal/locales/fr.json
@@ -246,6 +246,9 @@
   "modal.jail_name": "Nom du jail",
   "modal.jail_name_hint": "Seuls les caractères alphanumériques, les tirets et les underscores sont autorisés.",
   "modal.test_logpath": "Tester le chemin de journal",
+  "modal.local_server_logpath_note": "ℹ️ Note:",
+  "modal.local_server_logpath_text_prefix": "Pour les serveurs locaux Fail2ban (p. ex. installé sur le système hôte ou dans un conteneur sur le même hôte), les fichiers de journal doivent également être montés dans le conteneur fail2ban-ui (par ex.,",
+  "modal.local_server_logpath_text_suffix": ") ceci est nécessaire pour que fail2ban-ui puisse vérifier les variables ou chemins de logpath lors de la mise à jour des jails.",
   "modal.create": "Créer",
   "modal.create_filter": "Créer un nouveau filtre",
   "modal.create_filter_title": "Créer un nouveau filtre",
