--- a/internal/locales/it.json
+++ b/internal/locales/it.json
@@ -246,6 +246,9 @@
   "modal.jail_name": "Nome del jail",
   "modal.jail_name_hint": "Sono consentiti solo caratteri alfanumerici, trattini e underscore.",
   "modal.test_logpath": "Testa il percorso del log",
+  "modal.local_server_logpath_note": "ℹ️ Nota:",
+  "modal.local_server_logpath_text_prefix": "Per i server locali Fail2ban (ad es. installato sul sistema host o in un contenitore sullo stesso host), i file di log devono essere montati anche nel contenitore fail2ban-ui (ad es.,",
+  "modal.local_server_logpath_text_suffix": ") questo è necessario per permettere a fail2ban-ui di verificare variabili o percorsi di logpath quando si aggiornano i jails.",
   "modal.create": "Crea",
   "modal.create_filter": "Crea nuovo filtro",
   "modal.create_filter_title": "Crea nuovo filtro",
